k8s/apps/dataflarelabs-website/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataflarelabs-website
  annotations:
    operator.1password.io/auto-restart: "true"
