k8s/apps/dataflarelabs-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataflarelabs-website-svc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: dataflarelabs-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
