k8s/apps/dataflarelabs-website/external-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dataflarelabs-website-external
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - dataflarelabs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dataflarelabs-website-svc
          port: 80
